src/tui/snapshots/mysteries__tui__render__tests__tui_mode_line_plan.snap
---
source: src/tui/render.rs
expression: mode_line(&text)
---
‹info.fg›◔ plan‹/›‹text.muted› · shift+tab 切换 · think low‹/›
