src/tui/snapshots/mysteries__tui__render__tests__tui_mode_line_think_high_daylight.snap
---
source: src/tui/render.rs
expression: mode_line(&text)
---
‹text.muted›▸ normal · shift+tab 切换 · think high‹/›
