src/tui/snapshots/mysteries__tui__render__tests__tui_mode_line_yolo.snap
---
source: src/tui/render.rs
expression: mode_line(&text)
---
‹warning.fg›▲ yolo‹/›‹text.muted› · shift+tab 切换‹/›
