src/tui/snapshots/mysteries__tui__render__tests__tui_models_picker_filtered.snap
---
source: src/tui/render.rs
expression: text
---
‹text.secondary +bold›✦ mysteries‹/›‹text.muted›  agent · v1.2.0‹/›

‹border.strong›────────────────────────────────────────────────────────────────────────────────‹/›


‹text.primary›                                  ‹/›‹text.title +bold›✦ MYSTERIES‹/›
‹text.primary›                         ‹/›‹accent.primary›AGENT · v1.2.0 · 终端编码助手‹/›
‹text.primary›        ‹/›‹text.body›读只读,写必询 —— 每一次文件改动与命令执行,都先把 diff 摊给你,等‹/›
‹text.primary›                               ‹/›‹text.body›你按下 y 才动手。‹/›

‹text.primary›                                     ‹/›‹text.muted›试试 ↓‹/›
‹text.primary›                   ‹/›‹accent.primary›〔任务〕‹/›‹text.primary› 给 Config 加 timeout_secs 字段‹/›
‹text.primary›                   ‹/›‹accent.primary›〔/help〕‹/›‹text.primary› 查看内置命令‹/›
‹border.strong bg=bg.surface›┌──────────────────────────────────────────────────────┐‹/›
‹border.strong bg=bg.surface›│‹/›‹accent.primary bg=bg.surface +bold›模型‹/›‹text.primary bg=bg.surface›                                                  ‹/›‹border.strong bg=bg.surface›│‹/›‹text.primary›Loop)‹/›
‹border.strong bg=bg.surface›│‹/›‹text.secondary bg=bg.surface +dim›wps‹/›‹text.primary bg=bg.surface›                                                   ‹/›‹border.strong bg=bg.surface›│‹/›
‹border.strong bg=bg.surface›│‹/›‹text.primary bg=bg.surface›  ‹/›‹accent.primary bg=bg.surface›● ‹/›‹accent.primary bg=bg.surface +bold +reversed›zhipu/glm-5.2‹/›‹text.primary bg=bg.surface›                                     ‹/›‹border.strong bg=bg.surface›│‹/›
‹border.strong bg=bg.surface›│‹/›‹text.primary bg=bg.surface›    ‹/›‹text.body bg=bg.surface›zhipu/glm-5‹/›‹text.primary bg=bg.surface›                                       ‹/›‹border.strong bg=bg.surface›│‹/›
‹border.strong bg=bg.surface›│‹/›‹text.secondary bg=bg.surface›过滤: ‹/›‹accent.primary bg=bg.surface›glm‹/›‹text.primary bg=bg.surface›                                             ‹/›‹border.strong bg=bg.surface›│‹/›
‹border.strong bg=bg.surface›│‹/›‹text.secondary bg=bg.surface›↑↓ 选 · Enter 切 · Esc 取消‹/›‹text.primary bg=bg.surface›                           ‹/›‹border.strong bg=bg.surface›│‹/›‹border.subtle›───────────────────────┐‹/›
‹border.strong bg=bg.surface›└──────────────────────────────────────────────────────┘‹/›‹text.primary›                       ‹/›‹border.subtle›│‹/›
‹border.subtle›└──────────────────────────────────────────────────────────────────────────────┘‹/›
‹text.muted›wps · zhipu/glm-5.2 · iter 0/8 · 0 msgs · workspace‹/›
‹text.muted›▸ normal · shift+tab 切换 · think low‹/›
