src/tui/snapshots/mysteries__tui__render__tests__tui_multiline_input_dynamic_height_soft_wrap.snap
---
source: src/tui/render.rs
expression: output
---
✦ mysteries  agent · v1.3.1

──────────────────────────────────────────
◆ transcript remains visible











◇ 就绪
┌────────────────────────────────────────┐
│> 普通 multi                            │
│  abcdefghijklmnopqrstuvwxyz0123456789AB│
│  CDEFGHIJ                              │
│  final 行                              │
└────────────────────────────────────────┘
mock · mock-model · iter 0/4 · 1 msgs · .
▸ normal · shift+tab 切换 · think low
